--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "reselect": "^4.0.0",
     "stripe": "^8.63.0"
   },
+  "engines": {
+    "node": "12.13.0",
+    "npm": "6.14.0" 
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
