--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-REACT_APP_NODE_ENV="development"
+REACT_APP_API_KEY=AIzaSyDYU7Ry7YnlfvBl4LKIork_AIcRTDZ3gGE
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_BASE_URL=http://localhost:8000
